# pam_session_timelimit

./: Makefile.am  README.md  configure.ac  pam_session_timelimit.c  time-util.c  time-util.h  time_limits.conf
debian/: changelog  control  copyright  postinst  prerm  rules  watch
debian/pam-configs/: session-timelimit
doc/: Makefile.am  custom-man.xsl  pam_session_timelimit.8.xml
tests/: Makefile.am  tests.c
tests/data/: broken_whitespace  comment_after_entry  commented_limit  invalid_time_spec  limit_with_spaces  match_last_entry  missing_limit  only_comments
